--- a/Breakout/Breakout/Breakout.vcxproj
+++ b/Breakout/Breakout/Breakout.vcxproj
@@ -71,8 +71,8 @@
   </ImportGroup>
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
-    <IncludePath>$(SolutionDir)\external\glfw-3.3.9.bin.WIN64\include\;$(SolutionDir)\external\include;$(IncludePath)</IncludePath>
-    <LibraryPath>$(SolutionDir)\external\glfw-3.3.9.bin.WIN64\lib-vc2022;$(LibraryPath)</LibraryPath>
+    <IncludePath>$(SolutionDir)\external\glfw-3.3.9.bin.WIN64\include\;$(SolutionDir)\external\include;$(SolutionDir)\external\irrKlang-64bit-1.5.0\include;$(IncludePath)</IncludePath>
+    <LibraryPath>$(SolutionDir)\external\glfw-3.3.9.bin.WIN64\lib-vc2022;$(SolutionDir)\external\irrKlang-64bit-1.5.0\lib\Winx64-visualStudio;$(LibraryPath)</LibraryPath>
     <ExternalIncludePath>$(SolutionDir)\external\glfw-3.3.9.bin.WIN64\include\;$(SolutionDir)\external\include;$(IncludePath)$(VC_IncludePath);$(WindowsSDK_IncludePath);</ExternalIncludePath>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
@@ -114,8 +114,12 @@
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalDependencies>glfw3.lib;opengl32.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>glfw3.lib;opengl32.lib;irrKlang.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
+    <PostBuildEvent>
+      <Message>copy dll</Message>
+      <Command>copy $(SolutionDir)external\irrKlang-64bit-1.5.0\bin\winx64-visualStudio\*.dll $(OutDir) </Command>
+    </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <ClCompile>
@@ -132,6 +136,12 @@
       <OptimizeReferences>true</OptimizeReferences>
       <GenerateDebugInformation>true</GenerateDebugInformation>
     </Link>
+    <PostBuildEvent>
+      <Command>copy $(SolutionDir)external\irrKlang-64bit-1.5.0\bin\winx64-visualStudio\*.dll $(OutDir) </Command>
+    </PostBuildEvent>
+    <PostBuildEvent>
+      <Message>copy dll</Message>
+    </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="BallObject.cpp" />
@@ -159,6 +169,10 @@
     <ClInclude Include="Shader.h" />
     <ClInclude Include="SpriteRenderer.h" />
     <ClInclude Include="Texture2D.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="..\external\irrKlang-64bit-1.5.0\bin\winx64-visualStudio\ikpMP3.dll" />
+    <None Include="..\external\irrKlang-64bit-1.5.0\bin\winx64-visualStudio\irrKlang.dll" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
