--- a/Breakout/Breakout/Breakout.vcxproj
+++ b/Breakout/Breakout/Breakout.vcxproj
@@ -75,6 +75,11 @@
     <LibraryPath>$(SolutionDir)\external\glfw-3.3.9.bin.WIN64\lib-vc2022;$(SolutionDir)\external\irrKlang-64bit-1.5.0\lib\Winx64-visualStudio;$(LibraryPath)</LibraryPath>
     <ExternalIncludePath>$(SolutionDir)\external\glfw-3.3.9.bin.WIN64\include\;$(SolutionDir)\external\include;$(IncludePath)$(VC_IncludePath);$(WindowsSDK_IncludePath);</ExternalIncludePath>
   </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
+    <IncludePath>$(SolutionDir)\external\glfw-3.3.9.bin.WIN64\include\;$(SolutionDir)\external\include;$(SolutionDir)\external\irrKlang-64bit-1.5.0\include;$(IncludePath)</IncludePath>
+    <ExternalIncludePath>$(SolutionDir)\external\glfw-3.3.9.bin.WIN64\include\;$(SolutionDir)\external\include;$(IncludePath)$(VC_IncludePath);$(WindowsSDK_IncludePath);</ExternalIncludePath>
+    <LibraryPath>$(SolutionDir)\external\glfw-3.3.9.bin.WIN64\lib-vc2022;$(SolutionDir)\external\irrKlang-64bit-1.5.0\lib\Winx64-visualStudio;$(LibraryPath)</LibraryPath>
+  </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
       <WarningLevel>Level3</WarningLevel>
@@ -135,6 +140,7 @@
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <GenerateDebugInformation>true</GenerateDebugInformation>
+      <AdditionalDependencies>glfw3.lib;opengl32.lib;irrKlang.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
     <PostBuildEvent>
       <Command>copy $(SolutionDir)external\irrKlang-64bit-1.5.0\bin\winx64-visualStudio\*.dll $(OutDir) </Command>
